# JumpMania

./: .gitignore  Anemy.cpp  AudioManager.cpp  Background.cpp  CMakeLists.txt  GameController.cpp  Level.cpp  Level.txt  Player.cpp  SaveManager.cpp  UI.cpp  game  main.cpp
include/: Anemy.h  AudioManager.h  Background.h  GameContext.h  GameController.h  GameState.h  InputState.h  Level.h  Player.h  SaveManager.h  Settings.h  UI.h
